--- a/terms.html
+++ b/terms.html
@@ -8,10 +8,13 @@
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; max-width: 850px; margin: 0 auto; padding: 30px; background-color: #f4f7f9; }
         .content-box { background: #fff; padding: 40px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
         h1 { color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 10px; margin-bottom: 20px; }
-        h2 { color: #2980b9; margin-top: 30px; font-size: 1.4em; }
+        h2 { color: #2980b9; margin-top: 30px; font-size: 1.4em; border-left: 4px solid #3498db; padding-left: 10px; }
         p { margin-bottom: 15px; text-align: justify; }
         ul { margin-bottom: 20px; padding-left: 20px; }
         li { margin-bottom: 8px; }
+        .privacy-link-box { background: #e8f4fd; padding: 20px; border-radius: 8px; border: 1px solid #3498db; margin: 30px 0; text-align: center; }
+        .privacy-link-box a { color: #2980b9; font-weight: bold; text-decoration: none; font-size: 1.1em; }
+        .privacy-link-box a:hover { text-decoration: underline; }
         .contact-info { background: #eef2f7; padding: 20px; border-radius: 5px; margin-top: 30px; border-left: 5px solid #3498db; }
         .footer { margin-top: 40px; font-size: 0.9em; color: #7f8c8d; text-align: center; border-top: 1px solid #eee; padding-top: 20px; }
     </style>
@@ -20,45 +23,53 @@
     <div class="content-box">
         <h1>Terms & Conditions</h1>
         <p>These terms and conditions apply to the <strong>Tezvia</strong> app (hereby referred to as "Application") for mobile devices that was created by <strong>Md Riaj</strong> (Developer of Tezvia) (hereby referred to as "Service Provider") as a Free service.</p>
+        
+        <p>By downloading, installing, or using the Application, you agree to be bound by these terms. If you do not agree, please uninstall the Application immediately.</p>
 
-        <p>Upon downloading or utilizing the Application, you are automatically agreeing to the following terms. It is strongly advised that you thoroughly read and understand these terms prior to using the Application.</p>
+        <div class="privacy-link-box">
+            <span>Important: Please also review our </span>
+            <a href="https://tezviaapp.github.io/Privacy-Policy/index.html" target="_blank">Privacy Policy</a>
+            <span> to understand how we handle your data.</span>
+        </div>
 
-        <h2>Intellectual Property Rights</h2>
-        <p>Unauthorized copying, modification of the Application, any part of the Application, or our trademarks is strictly prohibited. Any attempts to extract the source code, translate the Application into other languages, or create derivative versions are not permitted. All trademarks, copyrights, and database rights remain the property of the Service Provider.</p>
+        <h2>1. Age Requirement</h2>
+        <p>By using the Application, you represent that you are at least 13 years of age. If you are under 18, you represent that you have reviewed these terms with your parent or guardian and they have agreed to them on your behalf.</p>
 
-        <h2>Service Modifications and Charges</h2>
-        <p>The Service Provider reserves the right to modify the Application or charge for its services at any time and for any reason. Any charges will be clearly communicated to you beforehand.</p>
-
-        <h2>Data Security and Device Integrity</h2>
-        <p>The Application processes personal data to provide the Service. It is your responsibility to maintain the security of your phone. The Service Provider strongly advises against jailbreaking or rooting your phone, as it could expose your device to malware and compromise security features.</p>
-
-        <h2>Third-Party Terms and Conditions</h2>
-        <p>The Application utilizes third-party services that have their own Terms and Conditions:</p>
+        <h2>2. Intellectual Property Rights</h2>
+        <p>All trademarks, copyrights, database rights, and other intellectual property rights related to the Application belong to the Service Provider. You are strictly prohibited from:</p>
         <ul>
-            <li><a href="https://policies.google.com/terms" target="_blank">Google Play Services</a></li>
-            <li><a href="https://developers.google.com/admob/terms" target="_blank">AdMob</a></li>
-            <li><a href="https://firebase.google.com/terms/analytics" target="_blank">Google Analytics for Firebase</a></li>
-            <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank">Firebase Crashlytics</a></li>
-            <li><a href="https://www.facebook.com/legal/terms" target="_blank">Facebook</a></li>
-            <li>One Signal, Sentry, Amplitude, Mapbox, Mixpanel, RevenueCat</li>
+            <li>Copying or modifying the Application or its trademarks.</li>
+            <li>Attempting to extract the source code or translating the Application into other languages.</li>
+            <li>Creating derivative versions of the Application.</li>
         </ul>
 
-        <h2>Connectivity and Responsibility</h2>
-        <p>Certain functions require an active internet connection. The Service Provider cannot be held responsible for the Application not functioning at full capacity due to lack of Wi-Fi or exhausted data allowances. You are responsible for any charges incurred from your mobile provider, including roaming charges.</p>
+        <h2>3. User Conduct and Responsibility</h2>
+        <p>You are responsible for maintaining the security of your device. We strongly advise against jailbreaking or rooting your phone, as it may compromise security features and cause the Application to malfunction. You agree not to use the Application for any unlawful activities.</p>
 
-        <h2>Artificial Intelligence (AI)</h2>
-        <p>The Application incorporates AI technologies to provide certain features. By using the Application, you agree that AI may be used to process data to enhance the user experience in compliance with applicable laws.</p>
+        <h2>4. Third-Party Services</h2>
+        <p>The Application utilizes third-party services that have their own Terms and Conditions. By using Tezvia, you also agree to the terms of Google Play Services, AdMob, Google Analytics for Firebase, Facebook, One Signal, Sentry, Amplitude, Mapbox, Mixpanel, and RevenueCat.</p>
 
-        <h2>Termination and Updates</h2>
-        <p>The Service Provider may update or cease providing the Application at any time. Upon termination, the rights granted to you will end, and you must cease using and delete the Application.</p>
+        <h2>5. Artificial Intelligence (AI)</h2>
+        <p>The Application incorporates AI technologies to provide certain features. By using the Application, you acknowledge and agree that AI may process data to enhance the user experience.</p>
 
-        <h2>Changes to These Terms</h2>
-        <p>The Service Provider may periodically update these Terms and Conditions. You are advised to review this page regularly for any changes.</p>
+        <h2>6. Limitation of Liability and Disclaimer</h2>
+        <p>The Application is provided on an "AS IS" and "AS AVAILABLE" basis. The Service Provider shall not be liable for any direct, indirect, or incidental damages resulting from your use of the Application.</p>
+
+        <h2>7. Connectivity and Charges</h2>
+        <p>Certain functions require an active internet connection. You are responsible for any data charges incurred from your mobile provider, including roaming charges.</p>
+
+        <h2>8. Governing Law</h2>
+        <p>These Terms and Conditions are governed by and construed in accordance with the laws of <strong>Bangladesh</strong>. Any disputes shall be subject to the exclusive jurisdiction of the courts of Bangladesh.</p>
+
+        <h2>9. Termination and Updates</h2>
+        <p>The Service Provider reserves the right to modify or cease providing the Application at any time. Upon termination, you must cease using and delete the Application from your device.</p>
+
+        <h2>10. Changes to These Terms</h2>
+        <p>We may update these Terms and Conditions periodically. Continued use of the Application after changes are posted constitutes your acceptance of the new terms.</p>
 
         <div class="contact-info">
             <strong>Contact Us:</strong><br>
-            If you have any questions or suggestions, contact the Service Provider at: <br>
-            <strong>tezvia.official@gmail.com</strong>
+            Email: <strong>tezvia.official@gmail.com</strong>
         </div>
 
         <div class="footer">
